successfully get data from JsonSuccessfully-read-the-replies Solved the Problem Session.java cannot get Replyids, or get Hash vallue by calling thread.getReplies()); return was as shown [com.ecs160.Post$Thread@631330c]. because by defult Java will call Object.toString which is not monifyed (Spent me over 10 hours to find out the solution.......)